Add the logo to all the pages.

--- a/client/beam.css
+++ b/client/beam.css
@@ -34,6 +34,7 @@ div.thread {
     padding-left: 20px;
     background-color: #5ed1ba;
     border-radius: 5px;
+    overflow: auto;
 }
 div.article {
     overflow: auto;
