--- a/client/beam.css
+++ b/client/beam.css
@@ -17,7 +17,7 @@ body {
 }
 div.thread span.from {
     font-weight: bold;
-    color: #000080;
+    color: #c00000;
 }
 div.searchResults, div.searchBar, div.roots {
     border: 0px solid black;
